Mantas papilde index Pauliaus Article

--- a/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/index.html
+++ b/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/index.html
@@ -24,6 +24,17 @@
       </div>
     </div>
     </header>
+    <div class="row">
+        <div class="col-md-12  ">
+            <div class="col-md-4"><img src="pav%20(2).jpg"></div>
+            <div class="col-md-8 text-left">
+                <h2>Akmens pavadinimas</h2>
+                <p cal>You better get out there son - I got $20 goin' betting on ya so you can't let me down. I got $30 goin' betting against you so don't let ME down. 3...4... You better face up to it son, because if you don't go out there...Buford, you sure that blacksmith is gonna be at this here shindig? Sure he's here. Everybody's here tonight. You gentlemen are gonna have to check your firearms if you want to join in on the festivities. (laughs) And who's gonna make us, tender-foot...you? I am. (Buford turns to see Marshall Strickland with a rifle aimed at Buford's shoulder.)</p>
+
+            </div>
+
+        </div>
+    </div>
     <div class="row text-center">
       <h2>Antraste</h2>
       <div class="col-md-4">
