--- a/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/galerija.html
+++ b/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/galerija.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1 id="galerijosh1" class="text-center">Akmenų Galerija</h1>
+    <h1 id="galerijosh2" class="text-center"><a href="index.html"> Grįžti į pradinį puslapį </a></h1>
 
     <div class="foto">
         <div class="container">
