--- a/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/index.html
+++ b/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/index.html
@@ -9,95 +9,108 @@
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
   <!-- main.css eina po visu kitu CSS failu !!!! -->
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <title>Labas</title>
+  <title>Sveiki atvyke!</title>
 </head>
 
 
-<body class="  ">
+<body>
+
+
 
   <div class="container">
 
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="text-center">testuosisme <small>bootstrap</small> <span class="small">dabar</span></h1>
-        <p>
-          <s>Lorem ipsum</s> dolor sit amet, <mark>consectetur</mark> adipisicing elit, sed do <i>eiusmod tempor incididunt</i>ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <b>ullamco laboris</b> nisi ut aliquip
-          ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <u>pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa</u>qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h4 title="by bbbbbbbbbbb" class="text-uppercase"> Lorem ipsum dolor sit amet </h4>
+    <header>
+<div class="row">
+  <div class=""
+      <img src="" alt="paveiksliukai" />
+      <nav class="navbar navbar-default navbar navbar-inverse alert-info">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+            <a class="navbar-brand" href="#">Brand</a>
+          </div>
 
-        <ul class="list-inline pull-right">
-          <li>HOME</li>
-          <li>ABOUT</li>
-          <li>GALERY</li>
-          <li>CONTACTS</li>
-          </ul>
-            <!-- nutraukia float -->
-          <div class="clearfix"></div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Contacts</a></li>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
 
+            </ul>
+            <form class="navbar-form navbar-left">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
 
-
-
-        <!--antraste  -->
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>nr</th>
-              <th>name</th>
-              <th>last name</th>
-            </tr>
-          </thead>
-          <!-- pirma eilute -->
-          <tr>
-            <td>1 * </td>
-            <td>tomas</td>
-            <td>tomaitis</td>
-          </tr>
-          <!-- antra eilute -->
-          <tr>
-            <td>2</td>
-            <td>jonas</td>
-            <td>jonaitis</td>
-          </tr>
-          <tr>
-            <td>1 * </td>
-            <td>tomas</td>
-            <td>tomaitis</td>
-          </tr>
-          <!-- trecia eilute -->
-          <tr>
-            <td>2</td>
-            <td>jonas</td>
-            <td>jonaitis</td>
-          </tr>
-          <!-- footer -->
-          <tfoot>
-            <tr>
-              <td> * dar neregistruotas zmogus </td>
-              <td></td>
-              <td></td>
-
-            </tr>
+          </div>
+          <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+      </nav>
 
 
-          </tfoot>
-        </table>
+</div>
+    </header>
 
-<textarea rows="10">labas</textarea>
-
-<button>BUY</button>
-<a class="btn btn-default btn-danger btn-xs" href=""> SELL </a>
-<br />
-<br />
-
-<img src="http://68.media.tumblr.com/33075dea1238585bce5b26296fe695c2/tumblr_inline_o4m75zvcj51tv67o3_400.jpg" class="img-responsive img-thumbnail center-block">
+    <body id="wrapper">
+      <div class="row">
+        <div class="col-md-4">
 
 
 
-      </div>
+
+          <h1>Pirmadienis!</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p> <br/>
+        </div>
+        <br/>
+        <div class="col-md-4">
+          <div class="jumbotron white">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p> <br/>
+
+          </div>
+          <div class="col-md-4">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+
+          </div>
+
+
+
+
+
+        </div>
+    </body>
+    <footer>
+
+
+
+    </footer>
+
+
     </div>
-
-  </div>
 </body>
 
 </html>
