--- a/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/galerija.html
+++ b/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/galerija.html
@@ -16,23 +16,23 @@
     <div class="foto">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="row">
-                        <div class="col-md-12">
-                            <img class="img1" src="pav%20(1).jpg">
+                        <div class="col-xs-12">
+                            <img class="img-circle img-responsive img1" src="pav%20(1).jpg">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4"> <img src="pav%20(2).jpg"></div>
-                        <div class="col-md-4"><img src="pav%20(3).jpg"></div>
-                        <div class="col-md-4"><img src="pav%20(2).jpg"></div>
+                        <div class="col-xs-4"><img  class="img-circle img-responsive" src="pav%20(2).jpg"></div>
+                        <div class="col-xs-4"><img class="img-circle img-responsive" src="pav%20(3).jpg"></div>
+                        <div class="col-xs-4"><img class="img-circle img-responsive" src="pav%20(2).jpg"></div>
 
                     </div>
 
                     <div class="row">
-                        <div class="col-md-4"> <img src="pav%20(2).jpg"></div>
-                        <div class="col-md-4 "><img src="pav%20(3).jpg"></div>
-                        <div class="col-md-4"><img src="pav%20(2).jpg"></div>
+                        <div class="col-xs-4"><img class="img-circle img-responsive" src="pav%20(2).jpg"></div>
+                        <div class="col-xs-4 "><img class="img-circle img-responsive" src="pav%20(3).jpg"></div>
+                        <div class="col-xs-4"><img class="img-circle img-responsive" src="pav%20(2).jpg"></div>
 
                     </div>
 
@@ -53,8 +53,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12  ">
-                <div class="col-md-4"><img src="pav%20(2).jpg"></div>
-                <div class="col-md-8 text-left">
+                <div class="col-xs-4"><img class="img-circle img-responsive" src="pav%20(2).jpg"></div>
+                <div class="col-xs-8 text-left">
                     <h2>Akmens pavadinimas</h2>
                     <p cal>You better get out there son - I got $20 goin' betting on ya so you can't let me down. I got $30 goin' betting against you so don't let ME down. 3...4... You better face up to it son, because if you don't go out there...Buford, you sure that blacksmith is gonna be at this here shindig? Sure he's here. Everybody's here tonight. You gentlemen are gonna have to check your firearms if you want to join in on the festivities. (laughs) And who's gonna make us, tender-foot...you? I am. (Buford turns to see Marshall Strickland with a rifle aimed at Buford's shoulder.)</p>
                 
@@ -71,7 +71,7 @@
     <div id="wrapper-mantas">
   <div class="container-fluid pirkti">
     <div class="row pirkti">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <button type="button" class="btn-default">Pirkti</button>
 
       </div>
