--- a/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/index.html
+++ b/uzduotys/uzduotys6/bendra uzduotis Mantas Paulius/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
-<body>
+<body >
   <div class="container">
-    <header>
+    <header class="supersizer">
     <div class="row text-center">
       <div class="col-md-2">
         <!-- Logo po apacia -->
