bendras su reklama

--- a/uzduotys/uzduotys6/andriuszygis/gallery.html
+++ b/uzduotys/uzduotys6/andriuszygis/gallery.html
@@ -10,9 +10,49 @@
 </head>
 
 <body>
-  <!-- MENIU -->
-<h2>Meniu will be here</h2>
-<br />
+  <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+              <header>
+                  <nav>
+
+
+
+                      <ul class="list-inline nav nav-pills">
+                          <li class="menu-img"><a href="index.html"><img class="logo-menu img-responsive" src="asset/logo.png" alt="spartan logo"/></a></li>
+                          <li class="menu-navigation" role="presentation"><a class="btn btn-primary" href="index.html">Home</a></li>
+                          <li class="menu-navigation" role="presentation"><a class="btn btn-primary" href="gallery.html">Gallery</a></li>
+                          <li class="menu-navigation" role="presentation"><a class="btn btn-primary" href="#">Contacts</a></li>
+                      </ul>
+
+                  </nav>
+
+                  <img class="muscle img-responsive" src="asset/muscle.png" alt="muscle logo">
+                  <div class="clearfix"></div>
+              </header>
+          </div>
+      </div>
+  </div>
+  <!-- Zygio reklama -->
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-12">
+              <!--<div class="advert">-->
+                  <div class="advert">
+
+                      <!--<h2 class="text-center ">Pirk aiFauna</h2>-->
+                      <!--<h4 class="text-center">Spauskite mygtuka ir uzsisakykite naujaji aiFaun dabar!</h4>-->
+
+                      <button class="btn btn-default btn-lg pirk-mygtukas" type="button">Pirk aiFauna</button>
+
+                  </div>
+          </div>
+
+      </div>
+
+  </div>
+
+
 
   <!-- PAVEIKSLIUKAI -->
   <h2 class="h2gallary"> Imagine Gallary</h2>
