--- a/uzduotys/uzduotys6/andriuszygis/index.html
+++ b/uzduotys/uzduotys6/andriuszygis/index.html
@@ -66,10 +66,10 @@
                             <p class="text-justify">Consequat amet culpa ut dolor laborum do elit minim. Lorem duis aliquip ea mollit duis nisi velit velit nulla tempor aliqua ea pariatur. Cillum duis aliqua qui incididunt aliqua. Exercitation elit nisi fugiat esse eu eu occaecat occaecat quis laborum non aute cillum laborum. Excepteur commodo laboris do mollit esse sint et voluptate culpa consectetur est est. Velit in reprehenderit proident duis pariatur pariatur.</p>
                         </div>
                           <div class="col-md-4">
-                            <p class="text-justify">Consequat amet culpa ut dolor laborum do elit minim. Lorem duis aliquip ea mollit duis nisi velit velit nulla tempor aliqua ea pariatur. Cillum duis aliqua qui incididunt aliqua. Exercitation elit nisi fugiat esse eu eu occaecat occaecat quis laborum non aute cillum laborum. Excepteur commodo laboris do mollit esse sint et voluptate culpa consectetur est est. Velit in reprehenderit proident duis pariatur pariatur.</p>
+                            <p class="text-justify">Occaecat proident Lorem ut irure aliqua officia sint duis. Qui commodo consectetur ad id exercitation velit cupidatat eiusmod cupidatat pariatur dolor id enim irure. Duis aliqua id sit reprehenderit anim deserunt ad dolor in. Aliqua cupidatat qui dolore exercitation id ad. Elit labore ut magna et culpa et est.</p>
                         </div>
                           <div class="col-md-4">
-                            <p class="text-justify">Consequat amet culpa ut dolor laborum do elit minim. Lorem duis aliquip ea mollit duis nisi velit velit nulla tempor aliqua ea pariatur. Cillum duis aliqua qui incididunt aliqua. Exercitation elit nisi fugiat esse eu eu occaecat occaecat quis laborum non aute cillum laborum. Excepteur commodo laboris do mollit esse sint et voluptate culpa consectetur est est. Velit in reprehenderit proident duis pariatur pariatur.</p>
+                            <p class="text-justify">Cillum labore pariatur cillum non culpa ut esse aute minim reprehenderit et exercitation. Fugiat dolor Lorem occaecat Lorem reprehenderit quis laboris amet magna qui in aliquip qui. Qui reprehenderit irure esse et commodo ad dolore occaecat deserunt quis sint do quis quis. Aute voluptate eu qui elit anim labore amet aliquip sunt esse aute nulla. Officia ea reprehenderit nulla fugiat quis consectetur deserunt id in magna Lorem voluptate cillum.</p>
                         </div>
                     </div>
                 </article>
@@ -86,7 +86,9 @@
                         <!--<h2 class="text-center ">Pirk aiFauna</h2>-->
                         <!--<h4 class="text-center">Spauskite mygtuka ir uzsisakykite naujaji aiFaun dabar!</h4>-->
 
-                        <button class="btn btn-default btn-lg pirk-mygtukas"type="button">Pirk aiFauna</button>
+                        <!--<button class="btn btn-default btn-lg pirk-mygtukas"type="button">Pirk aiFauna</button>-->
+
+                        <a class="ads-button text-uppercase btn btn-default btn-lg " href="">pirkti</a>
 
                     </div>
 
