--- a/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/gallery.html
+++ b/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/gallery.html
@@ -11,32 +11,154 @@
 </head>
 
 <body class=" ">
+  <!-- Headeris & content-->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <img class="logo" <src="logo pull-right" src="galerija/logo2.jpg" />
+        <ul class="list-inline  pull-left">
+          <li> HOME </li>
+          <li> PROJECTS </li>
+          <li> GALLERY </li>
+          <li> CONTACTS </li>
+        </ul>
+      </div>
+    </div>
+
+  <div class="tesktai">
+    <div class="col-sm-12">
+  <h2 class="text center">GALERIJA</h2>
+      <div class="col-sm-4">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+    </div>
+    <div class="col-sm-4">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  </p>
+  </div>
+  <div class="col-sm-4">
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</p>
+</div>
+    </div>
+      </div>
+
+  </div>
+
+  <!-- galerija -->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="gallery">
+          <div class="ofset">
+
+
+            <img src="galerija/7.jpg" class="img-responsive img-circle" alt="Responsive image" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+    </div>
+  </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center"> Bendra užduotis <small> bootstrap </small> <span class="small"> dabar </span>
-        </h2>
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="galerija/1.JPG" class="img-responsive img-circle" alt="Responsive image">
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="galerija/2.jpg" class="img-responsive img-circle" alt="Responsive image">
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <img src="galerija/3.jpg" class="img-responsive img-circle" alt="Responsive image">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="galerija/4.JPG" class="img-responsive img-circle" alt="Responsive image">
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="galerija/5.jpg" class="img-responsive img-circle" alt="Responsive image">
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <img src="galerija/6.jpg" class="img-responsive img-circle" alt="Responsive image">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
-  <ul class="list-inline  pull-left">
-    <li> HOME </li>
-    <li> PROJECTS </li>
-    <li> GALLERY </li>
-    <li> CONTACTS </li>
-  </ul>
 
-<div class="container">
+  <!-- End of galerija -->
 
-</div>
+  <!-- Reklama antraste -->
+  <div class="conteiner-fluid ads">
+    <section>
+      <a class="reklamos-btn text-uppercase btn btn-default btn-lg">
+        PIRKTI
+      </a>
+    </section>
+    <div class="row">
+      <div class="col-ms-12">
+        <h1>advertising</h1>
 
+      </div>
+    </div>
+
+  </div>
+
+  <!-- End of Reklama antraste -->
+
+  <!-- Footeris -->
   <footer>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-ms-12">
+          <div class="row">
+            <div class="col-md-6">
+              <ul class="list-inline  pull-left">
+                <li> HOME </li>
+                <li> PROJECTS </li>
+                <li> GALLERY </li>
+                <li> CONTACTS </li>
+              </ul>
+              <div class="logo">
+                <img src="galerija/logo2.jpg" class="img-responsive img-circle" alt="Responsive image">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h1>123</h1>
+      </div>
 
 
   </footer>
+  </div>
+
 </body>
 
 </html>
