--- a/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/gallery.html
+++ b/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/gallery.html
@@ -48,23 +48,12 @@
       </container>
     </section>
   </div>
-  <!-- reklama prasideda -->
-  <div class="container-fluid reklama">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-1">
-        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTY1Ah8YzSULWn0Ix2dE7NeC3bxOdECFGu0m6vjK3C2rmMWZZj5" class="img-rounded luko" />
-      </div>
-      <div class="col-md-5 col-md-offset-1">
-        <h3 class="text-center">Article</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit veniam, quis nostrud
-        </p>
-      </div>
-    </div>
-  </div>
-<!-- reklama baigiasi -->
+  
+<div class="container-fluid mygtukas background">
+
+
+  <a class="reklamos-btn btn btn-primary btn-lg" href="#" role="button">PIRKTI</a>
+</div>
   <div class="container">
     <footer class="footer-bs foot">
 
@@ -74,10 +63,9 @@
           <h4>Menu</h4>
           <div class="col-md-6">
             <ul class="pages">
-              <li><a href="#">Bezdzione</a></li>
-              <li><a href="#">Apie</a></li>
-              <li><a href="#">Kontaktai</a></li>
-              <li><a href="#">Fun</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="#">GALERY</a></li>
+              <li><a href="#">CONTACTS</a></li>
               <li class="list-inline"><a href="#"><img width="30px" height="30px" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTY1Ah8YzSULWn0Ix2dE7NeC3bxOdECFGu0m6vjK3C2rmMWZZj5" class="img-rounded chalogo" />Pavadinimas</a></li>
             </ul>
           </div>
