--- a/uzduotys/uzduotis5/Paulius/sviezi html ir css failai/index.html
+++ b/uzduotys/uzduotis5/Paulius/sviezi html ir css failai/index.html
@@ -10,26 +10,14 @@
 
 <body>
 
-    <div class="container spalva">
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
 
-                <ul class="list-inline">
-                    <li>hey hey hey</li>
-                    <li>hey hey hey</li>
-                    <li>hey hey hey</li>
-                    <li>hey hey hey</li>
-                </ul>
-                
-                
-                <div class="quadrat">
-
-</div>
-
-            </div>
         </div>
 
     </div>
+        </div>
 
 </body>
 
