--- a/uzduotys/uzduotys6/tautvydastomas/komandine/gallery.html
+++ b/uzduotys/uzduotys6/tautvydastomas/komandine/gallery.html
@@ -14,6 +14,23 @@
 
 
 <body  >
+    <!-- HEADER & CONTENT -->
+    <div class="container">
+
+    </div>
+
+    <!--  ADS -->
+    <!-- ADS -->
+    <div class="container-fluid ads">
+        <section   >
+          <a class="reiklamos-btn text-uppercase btn btn-default btn-lg ">pirkti </a>
+        </section>
+    </div>
+
+    <!-- CONTENT & FOOTER -->
+    <div class="container">
+
+    </div>
 
 
 </body>
