--- a/uzduotys/uzduotys6/tautvydastomas/komandine/index.html
+++ b/uzduotys/uzduotys6/tautvydastomas/komandine/index.html
@@ -14,6 +14,53 @@
 
 
 <body  >
+  <!--  HEADER && content   -->
+  <div class="container">
+    <header>
+      <div class="row">
+          <div class="col-xs-12">
+              <img class="logo" src="img/logo.jpg" alt="logo apie mano versla" />
+
+
+              <img class="logo desinen" src="img/logo.jpg" alt="logo apie mano versla" />
+          </div>
+
+          <div class="tekstai">
+
+            <h2 class="text-center">Antraste</h2>
+            <div class="col-sm-4">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="col-sm-4">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+            <div class="col-sm-4">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              </p>
+            </div>
+          </div>
+      </div>
+    </header>
+  </div>
+
+  <!-- ADS -->
+  <div class="container-fluid ads">
+      <section   >
+        <a class="reiklamos-btn text-uppercase btn btn-default btn-lg ">pirkti </a>
+      </section>
+  </div>
+
+  <!-- CONTENT -->
+  <div class="container">
+    <footer>
+
+    </footer>
+  </div>
 
 
 </body>
