--- a/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/index.html
+++ b/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/index.html
@@ -13,25 +13,55 @@
 <body class=" ">
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center"> Bendra užduotis <small> bootstrap </small> <span class="small"> dabar </span>
-        </h2>
+    <header>
+      <div class="row">
+        <!-- LOGO -->
+        <div class="fox  inline-block  pull-left    margin=20px">
+          <img src="fox_logo.jpg" width="110px" height="90px" img-thumbnail/>
+        </div>
+        <!-- MENIU -->
+        <ul class="list-inline   pull-left  text-center">
+          <li> HOME </li>
+          <li> PROJECTS </li>
+          <li> GALLERY </li>
+          <li> CONTACTS </li>
+        </ul>
+        <!-- MENIU ICON -->
+        <div class="row">
+          <img class="Menu  inline-block  pull-right width=" 46 " height="46 " src=" "https://icons8.com"/>
+          <a href="https://icons8.com"></a>
+        </div>
+      </div>
+    </header>
+
+    <!-- SECOND CONTAINER -->
+    <div class="topics">
+      <div class="row">
+        <h3> Title </h3><br />
+        <div class="first  col-md-4">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="second  col-md-4">
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="third   col-md-4">
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
       </div>
     </div>
   </div>
-
-  <ul class="list-inline  pull-left">
-    <li> HOME </li>
-    <li> PROJECTS </li>
-    <li> GALLERY </li>
-    <li> CONTACTS </li>
-  </ul>
-
-<div class="container">
-
+  <!-- THIRD CONTAINER -->
+  <div class="container-fluid">
+    <div class="row">
+    <div class="button    text-center   padding">
+      <button><a href=""> BUY </a></button>
+    </div>
+  </div>
 </div>
-
   <footer>
 
 
