--- a/uzduotys/uzduotys6/rutaindrius/index.html
+++ b/uzduotys/uzduotys6/rutaindrius/index.html
@@ -64,7 +64,7 @@
 
   <div class="container-fluid reklama">
     <section>
-      <a class="reklamos btn text-uppercase btn-lg btn bnt-default btn-lg">pirkti</a>
+      <a href="http://www.google.com" class="reklamos btn text-uppercase btn-lg btn bnt-default btn-lg" >pirkti</a>
 
     </section>
 
@@ -75,8 +75,7 @@
       </div>
     </div>
   </div>
-=======
->>>>>>> 3a88f6aedb9fbfee3de5ef66160c6c95ace231a5
+
 
 
 
