--- a/uzduotys/uzduotis11/tautvydas/2/index.html
+++ b/uzduotys/uzduotis11/tautvydas/2/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>aaa</title>
+
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"  />
+    <!-- savo faila deti ZEMIAU!!!! -->
+    <link href="css/main.css" rel="stylesheet" type="text/css"  />
   </head>
   <body>
     <h1>jQuery - pamoka</h1>
