--- a/uzduotys/uzduotis11/tautvydas/3-eshop-move-item/index.html
+++ b/uzduotys/uzduotis11/tautvydas/3-eshop-move-item/index.html
@@ -7,11 +7,16 @@
 <link rel="stylesheet" href="./W3.CSS Template_files/css">
 <link rel="stylesheet" href="./W3.CSS Template_files/css(1)">
 <link rel="stylesheet" href="./W3.CSS Template_files/font-awesome.min.css">
+
+
 <style>
 .w3-sidebar a {font-family: "Roboto", sans-serif}
 body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </style>
-</head><body class="w3-content" style="max-width:1200px">
+</head>
+
+
+<body class="w3-content" style="max-width:1200px">
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
@@ -239,5 +244,8 @@ function w3_close() {
 }
 </script>
 
+
+<script src="lib/jquery-3.2.1.min.js"></script>
+<script src="js/main.js"></script>
 
 </body></html>
