--- a/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
+++ b/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
@@ -19,9 +19,9 @@
       <!-- nav => MENU -->
       <nav>
         <ul>
-          <li>
-            <a href="#testtuoju" >HOME</a>
-          </li>
+
+            <li><a href="#testtuoju" >HOME</a>
+
           <li> <a href="#testtuoju" >OUT TEAM</a> </li>
           <li> <a href="#testtuoju" >projects</a> </li>
           <li> <a href="#testtuoju" >contact</a> </li>
