po ilgojo savaitgalio

--- a/uzduotys/MAMP/uzduotis13/mantas/5-php-email/index.html
+++ b/uzduotys/MAMP/uzduotis13/mantas/5-php-email/index.html
@@ -21,7 +21,9 @@
             <input class="full-width" type="email" name="email" placeholder="Your email address">
             <input type="submit" value="Send">
           </form>
+          <div class="error-message">
 
+          </div>
         </div>
       </div>
     </div>
