--- a/uzduotys/uzduotis1/Simona/Projektas/index.html
+++ b/uzduotys/uzduotis1/Simona/Projektas/index.html
@@ -23,7 +23,6 @@
 
 <body>
   <header>
-    <!-- <div class="menu col-xs-1"> -->
 
     <!-- Menu icons -->
     <nav class="navbar navbar-inverse">
@@ -69,12 +68,12 @@
     </nav>
 
 
-    <div class="container-fluid">
+    <div class="container-fluid pirmas">
       <div class="row1">
 
         <!-- PERMATOMAS STULPELIS -->
         <section1>
-          <div class="permatomas col-xs-9">
+          <div class="permatomas col-xs-11">
             <div id="remelis2" class="remelis">
 
               <!-- LOGO -->
@@ -240,12 +239,12 @@
 
           <div class="form-group">
             <label for="name">Jūsų vardas:</label>
-            <input type="name" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name">
+            <input type="name" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name" style="height:50px">
           </div>
 
           <div class="form-group">
             <label for="email">El. pašto adresas:</label>
-            <input type="email" class="form-control" id="email" placeholder="Įrašykite savo el. paštą" name="email">
+            <input type="email" class="form-control" id="email" placeholder="Įrašykite savo el. paštą" name="email" style="height:50px">
           </div>
 
           <div class="form-group">
