--- a/uzduotys/uzduotis1/Simona/Projektas/index.html
+++ b/uzduotys/uzduotis1/Simona/Projektas/index.html
@@ -7,15 +7,16 @@
   <title> LRK </title>
   <meta name="description" content="Lietuvos Raudonoji knyga, itin reti Lietuvos augalai, gyvūnai, grybai" />
   <meta name="author" content="Simona Matiukaite" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/base/minified/jquery-ui.min.css" type="text/css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Spectral:300i">
   <link rel="stylesheet" type="text/css" href="bootstrap1/css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap1/js/jquery-3.2.1.min.js" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap1/css/main.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="bootstrap1/js/main.js" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 
 </head>
@@ -32,14 +33,31 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
         </ul>
-        <form class="navbar-form navbar-right">
+
+        <form action='' method='post' class="navbar-form navbar-right">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" name='name' class="auto" placeholder="Search"/>
+
+            <script type="text/javascript">
+            $(function() {
+
+            	//autocomplete
+            	$(".auto").autocomplete({
+            		source: "search.php",
+            		minLength: 1
+            	});
+
+            });
+            </script>
+
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit">
             <i class="glyphicon glyphicon-search"></i>
-          </button>
+              </button>
             </div>
+          </div>
+        </form>
+
             <ul>
               <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" img src="icons/imenu.png">MENU<span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -61,7 +79,6 @@
                 </ul>
               </li>
             </ul>
-          </div>
         </form>
       </div>
     </nav>
@@ -234,11 +251,11 @@
         <div class="contacts">
 
         <h2>Susisiekite</h2>
-        <form action="/action_page.php">
+        <!-- <form class="form-horizontal" action="/action_page.php"> -->
 
           <div class="form-group">
             <label for="name">Jūsų vardas:</label>
-            <input type="name" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name" style="height:50px">
+            <input type="text" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name" style="height:50px">
           </div>
 
           <div class="form-group">
@@ -251,10 +268,21 @@
             <textarea type="text" class="form-control" id="message" placeholder="Jūsų žinutė" name="message" style="height:80px"></textarea>
           </div>
 
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-8">
+              <div class="checkbox">
+                <label><input type="checkbox" name="remember"> Noriu gauti naujienlaiškį </label>
+              </div>
+            </div>
+          </div>
+
+        <form action="save.php">
           <div class="button">
             <button type="submit" class="btn btn-default">Siųsti</button>
           </div>
         </form>
+
+
       </div>
       </div>
 
@@ -262,7 +290,6 @@
   </wrapper>
 </body>
 
-<section class="get-in-touch">
 
   <!-- Mouse Scrolling icon by Icons8 -->
 
@@ -272,7 +299,7 @@
       <div class="row-foot">
         <div class="col-xs-4">
           <div class="foot-text">
-            <h7> &#169 2017-2018m. Visos teisės saugomos </h7>
+            <h7> &#169 2017m. - Visos teisės saugomos </h7>
           </div>
         </div>
         <div class="col-xs-3">
