--- a/uzduotys/uzduotis1/Simona/Projektas/search_animals.html
+++ b/uzduotys/uzduotis1/Simona/Projektas/search_animals.html
@@ -11,7 +11,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Spectral:300i">
   <link rel="stylesheet" type="text/css" href="bootstrap1/css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap1/js/jquery-3.2.1.min.js" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap1/css/main.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="bootstrap1/js/main.js" />
+
+  
 </head>
 
 <body background="miskas2.jpg">
