--- a/uzduotys/uzduotis1/Simona/Projektas/index.html
+++ b/uzduotys/uzduotis1/Simona/Projektas/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" type="text/css" href="bootstrap1/js/jquery-3.2.1.min.js" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap1/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="bootstrap1/js/main.js" />
@@ -172,20 +174,20 @@
 
     <section3>
       <div class="container trecias">
-        <!-- ŽEMĖLAPIS -->
+        <!-- GALERIJA -->
         <div class="row3">
           <div class="maps col-xs-12">
             <div class="rowinarow3">
               <div class="col-xs-9">
-                <h1> ŽEMĖLAPIS </h1>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-                  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+                <h1> Galerija </h1>
+
+                <div class="your-class">
+                  <div>your content</div>
+                  <div>your content</div>
+                  <div>your content</div>
+                </div>
+
+
               </div>
             </div>
           </div>
@@ -288,6 +290,8 @@
 
     </section5>
   </wrapper>
+
+
 </body>
 
 
@@ -312,7 +316,19 @@
   </footer>
 
 
+
   <script src="bootstrap1/js/jquery-3.2.1.min.js "></script>
   <script src="bootstrap1/js/main.js "></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.your-class').slick({
+          setting-name: setting-value
+        });
+      });
+    </script>
 
 </html>
